build_error_rerank.log
    Checking code-rag v0.1.0 (I:\01-Master_Code\Test-Labs\code-rag)
error[E0432]: unresolved import `fastembed::RerankModel`
 --> src\embedding.rs:1:73
  |
1 | use fastembed::{InitOptions, TextEmbedding, EmbeddingModel, TextRerank, RerankModel, RerankInitOptions};
  |                                                                         ^^^^^^^^^^^
  |                                                                         |
  |                                                                         no `RerankModel` in the root
  |                                                                         help: a similar name exists in the module: `RerankerModel`

warning: unused import: `ListArray`
 --> src\storage.rs:2:124
  |
2 | use arrow_array::{RecordBatch, RecordBatchIterator, StringArray, Float32Array, Int32Array, Int64Array, FixedSizeListArray, ListArray};
  |                                                                                                                            ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `RecordBatch`
 --> src\search.rs:7:19
  |
7 | use arrow_array::{RecordBatch, StringArray, Float32Array, Int32Array, ListArray, Array};
  |                   ^^^^^^^^^^^

error[E0277]: the trait bound `Vec<std::string::String>: AsRef<[&str]>` is not satisfied
   --> src\embedding.rs:36:50
    |
 36 |             let results = reranker.rerank(query, documents, true)?; 
    |                                    ------        ^^^^^^^^^ the trait `AsRef<[&str]>` is not implemented for `Vec<std::string::String>`
    |                                    |
    |                                    required by a bound introduced by this call
    |
    = help: the following other types implement trait `AsRef<T>`:
              `Vec<T, A>` implements `AsRef<Vec<T, A>>`
              `Vec<T, A>` implements `AsRef<[T]>`
note: required by a bound in `fastembed::reranking::r#impl::<impl TextRerank>::rerank`
   --> C:\Users\ASCC\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\fastembed-5.8.1\src\reranking\impl.rs:130:25
    |
127 |     pub fn rerank<S: AsRef<str> + Send + Sync>(
    |            ------ required by a bound in this associated function
...
130 |         documents: impl AsRef<[S]>,
    |                         ^^^^^^^^^^ required by this bound in `fastembed::reranking::r#impl::<impl TextRerank>::rerank`

error[E0061]: this method takes 4 arguments but 3 arguments were supplied
   --> src\embedding.rs:36:36
    |
 36 |             let results = reranker.rerank(query, documents, true)?; 
    |                                    ^^^^^^------------------------ argument #4 of type `std::option::Option<usize>` is missing
    |
note: method defined here
   --> C:\Users\ASCC\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\fastembed-5.8.1\src\reranking\impl.rs:127:12
    |
127 |     pub fn rerank<S: AsRef<str> + Send + Sync>(
    |            ^^^^^^
help: provide the argument
    |
 36 |             let results = reranker.rerank(query, documents, true, /* std::option::Option<usize> */)?; 
    |                                                                 ++++++++++++++++++++++++++++++++++

Some errors have detailed explanations: E0061, E0277, E0432.
For more information about an error, try `rustc --explain E0061`.
warning: `code-rag` (lib) generated 2 warnings
error: could not compile `code-rag` (lib) due to 3 previous errors; 2 warnings emitted
